tests/snapshots/snapshots__interpreter@for_blocks.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/for_blocks.pr
---
0
1
2
1
4
9
16
=> ()
