tests/snapshots/snapshots__interpreter@for_break.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/for_break.pr
---
15
6
=> ()
