tests/snapshots/snapshots__interpreter@forward.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/forward.pr
---
1
2
-7
=> ()
