tests/snapshots/snapshots__interpreter@fs.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/fs.pr
---
false
true
alpha, beta
false
=> ()
