tests/snapshots/snapshots__interpreter@fs_bytes.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/fs_bytes.pr
---
wrote
4
686900ff
true
=> ()
