tests/snapshots/snapshots__interpreter@grade_ops.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/grade_ops.pr
---
42
10
999
=> ()
